# ocaml-pjrt

./: README.md  dune-project  export_jax.py  iree_bindings.opam  log.txt  mnist.py  pjrt_bindings.opam  pyproject.toml  reconstruct.mlir  test.py  test_jax.py  test_jax_export.py  train.mlir
include/: pjrt_c_api.h
lib/: backpropagate.ml  c_utils.ml  client.ml  compile.ml  dataset.ml  default_backend.ml  distribution.ml  dsl.ml  dune  effects.ml  function_description.ml  functions.ml  hlist.ml  ir.ml  iree.available.ml  iree.unavailable.ml  metal.ml  mnist.ml  optim.ml  parameters.ml  parameters.mli  pjrt.available.ml  pjrt.unavailable.ml  pjrt_bindings.ml  random.ml  runtime.ml  stable_hlo.ml  svi.ml  tensor.ml  translation.ml  type_description.ml  vae.ml  value_type.ml  var.ml
test/: dune  test_iree_bindings.ml
