(library
 (name iree_bindings)
 (libraries
  ctypes
  integers
  progress
  device_api
  pjrt_bindings
  graphics
  domainslib)
 (ctypes
  (external_library_name iree)
  (build_flags_resolver
   (vendored
    (c_flags :standard -I ../../../c -I ../../../cxx)
    (c_library_flags
     :standard
     -L
     ../../libs/
     -l
     IREECompiler
     -L
     ../../libs/
     -liree_runtime_unified
     -lflatcc_parsing
     -lcpuinfo
     -ldl
     -lpthread
     -lstdc++)))
  (headers
   (include
    "iree/compiler/tool_entry_points_api.h"
    "iree/compiler/embedding_api.h"
    "iree/runtime/api.h"))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
