(library
 (name ocaml_bayes_dl)
 (public_name ocaml_bayes_dl)
 (libraries
  ctypes
  integers
  progress
  device_api
  (select
   pjrt.ml
   from
   (pjrt_bindings -> pjrt.available.ml)
   (!pjrt_bindings -> pjrt.unavailable.ml))
  (select
   iree.ml
   from
   (iree_bindings -> iree.available.ml)
   (!iree_bindings -> iree.unavailable.ml))
  graphics
  domainslib
  stb_image_write)
 (preprocess
  (pps ppx_inline_test ppx_expect))
 (inline_tests))
